--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a href = "https://bmorrison88.github.io/bmorrison88.github.io-shoppingList/">Click here!</a>
 </body>
 </html>
