Update on links

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
 	<title>Portfolio</title>
-	<link rel = "stylesheet" href = "../css/portfolio.css">
+	<link rel = "stylesheet" href = "css/portfolio.css">
 </head>
 <body>
 	<div id = "nav">
 		<h1 id = "title">Brandon Morrison's Portfolio</h1>
-		<?php include 'header.php';?>
+		<?php include 'php/header.php';?>
 	</div>
 	
 	<hr>
@@ -19,7 +19,7 @@
 			Hello, my name is Brandon Morrison. I recently graduated from SIUE with my Bachelor's 
 			degree in Computer Science. Below you will find some of my side projects and a little bit more about me!
 		</p>
-		<a href = "../resume.pdf"><button>Hire Me!</button></a>
+		<a href = "resume.pdf"><button>Hire Me!</button></a>
 	</div>
 	
 	<hr>
