Added Weseloh Site

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 		<h2 id = "h2">Latest Projects</h2>
 		<div id = "project-container">
 			<span class = "projects"><a href = "https://bmorrison88.github.io/bmorrison88.github.io-shoppingList/">Angular Shopping List</a></span>
+			<span class = "projects"><a href = "https://bmorrison88.github.io/bmorrison88.github.io-weseloh/">PSD to HTML</a></span>
+			
 			<!--  <span class = "boxes">Box 2</span>
 			<span class = "boxes">Box 3</span> -->
 		</div>
